src/test/testData/docker/DS002/Dockerfile-multistage.denied
FROM ubuntu
USER nobody
<error descr="User should be declared, often by default it is root
Running containers with 'root' user can lead to a container escape situation.">FROM debian</error>